--- a/layouts/partials/foot_custom.html
+++ b/layouts/partials/foot_custom.html
@@ -4,4 +4,4 @@
 <script async src="//yihui.name/js/center-img.js"></script>
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-最后部署时间：{{ now.Format "2006-01-02 15:04:05" }}
+最后部署时间（0.0.2）：{{ now.Format "2006-01-02 15:04:05" }}
